# split-write-rs

./: Cargo.toml
.github/workflows/: check.yml
src/: lib.rs  main.rs
