[package]
name = "split-write"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Manuel Quarneti <mq1@ik.me>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/mq1/split-write-rs"
homepage = "https://github.com/mq1/split-write-rs"
description = "Write files with configurable splitting"

[features]
default = []
cli = ["dep:lexopt", "dep:size"]

[dependencies]
lexopt = { version = "0.3", optional = true }
size = { version = "0.5", optional = true }

[lints.rust]
rust_2018_idioms = "deny"

[lints.clippy]
all = "warn"
pedantic = "warn"
